fix(videotoc): metrics on mobile

--- a/app/javascript/six/components/discordcta.scss
+++ b/app/javascript/six/components/discordcta.scss
@@ -1,7 +1,7 @@
 .discordcta {
   background-color: var(--discord-background);
   color: var(--discord-foreground);
-  max-width: 640px;
+  width: 100%;
   font-size: 1.1rem;
 
   &__link {
