--- a/app/javascript/six/components/forumcta.scss
+++ b/app/javascript/six/components/forumcta.scss
@@ -1,7 +1,6 @@
 .forumcta {
   background-color: var(--forumcta-background);
   color: var(--forumcta-foreground);
-  max-width: 640px;
   font-size: 1.1rem;
 
   &__link {
